--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <header>
         <h1>Welcome to EdgeLedger</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#cases">Cases</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
