--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/stylesheet.css">
     <title>Welcome to EdgeLedger</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to EdgeLedger</h1>
+    <header class="hero">
+        <h1 class="logo">
+            <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger</h1>
     </header>
     <div id="navbar" class="navbar"> 
         <nav>
