--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <header class="hero">
-        <h1 class="logo">
-            <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger</h1>
+        <div id="navbar" class="navbar"> 
+            <h1 class="logo">
+                <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#cases">Cases</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <div id="navbar" class="navbar"> 
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#cases">Cases</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-
     
 </body>
 </html>
