--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 </ul>
             </nav>
         </div>
+        <div class="content">
+            <h1>The Sky Is The Limit</h1>
+            <p>We provide world class financial assistance</p>
+            <a href="#about" class="btn"><i class="fa fa-chevron-right"></i>Read More</a>
+        </div>
     </header>
     
 </body>
