Started 2nd page with icons

--- a/index.html
+++ b/index.html
@@ -27,9 +27,37 @@
         <div class="content">
             <h1>The Sky Is The Limit</h1>
             <p>We provide world class financial assistance</p>
-            <a href="#about" class="btn"><i class="fa fa-chevron-right"></i>Read More</a>
+            <a href="#about" class="btn"><i class="fa fa-chevron-right"></i> Read More</a>
         </div>
     </header>
     
+    <main>
+        <section id="about" class="icons bg-light">
+            <div class="flex-items">
+                <i class="fas fa-book fa-2x"></i>
+                <div>
+                    <h3>Portfolio</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
+                </div>
+            </div>
+
+            <div class="flex-items">
+                <i class="fas fa-university fa-2x"></i>
+                <div>
+                    <h3>Investment Banking</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
+                </div>
+            </div>
+
+            <div class="flex-items">
+                <i class="fas fa-pencil-alt fa-2x"></i>
+                <div>
+                    <h3>Aquasitions</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
