--- a/index.html
+++ b/index.html
@@ -59,6 +59,35 @@
                 </div>
             </div>
         </section>
+
+        <!-- Cases -->
+        <section id="cases" class="cases flex-grid section-padding">
+            <header class="section-header">
+                <h2>This is what we do</h2>
+                <h3>Business Cases</h3>
+                <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, voluptas!
+                </p2>
+            </header>
+
+            <div class="row">
+                <div class="column">
+                    <img src="images/cases/cases1.jpg" alt="">
+                    <img src="images/cases/cases2.jpg" alt="">
+                </div>
+                <div class="column">
+                    <img src="images/cases/cases3.jpg" alt="">
+                    <img src="images/cases/cases4.jpg" alt="">
+                </div>
+                <div class="column">
+                    <img src="images/cases/cases5.jpg" alt="">
+                    <img src="images/cases/cases6.jpg" alt="">
+                </div>
+                <div class="column">
+                    <img src="images/cases/cases7.jpg" alt="">
+                    <img src="images/cases/cases8.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
