Added about section - needs work

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
         </div>
     </header>
     
+
     <main>
         <section id="about" class="icons bg-light">
             <div class="flex-items">
                 <div>
                     <i class="fas fa-book fa-2x"></i>
                     <div>
-                        <h3>Portfolio</h3>
+                        <h3>Portfolio Manager</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
                     </div>
                 </div>
@@ -53,13 +54,38 @@
                 <div>
                     <i class="fas fa-pencil-alt fa-2x"></i>
                     <div>
-                        <h3>Aquasitions</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
+                        <h3>Tax & custodial</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- About  -->
+        <section class="solutions flex-columns">
+            <div class="row">
+                <div class="column">
+                        <div class="column-1">
+                            <img src="images/people.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="column-2 bg-primary">
+                            <h4>What are you looking for?</h4>
+                            <h2>We provide bespoke solutions</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
+                            </p>
+                            <a href="#about" class="btn"><i class="fa fa-chevron-right"></i> Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    
         <!-- Cases -->
         <section id="cases" class="cases flex-grid section-padding">
             <header class="section-header">
@@ -86,6 +112,12 @@
                     <img src="images/cases/cases7.jpg" alt="">
                     <img src="images/cases/cases8.jpg" alt="">
                 </div>
+            </div>
+        </section>
+
+        <section id="blog" class="icons bg-light">
+            <div class="flex-items">
+
             </div>
         </section>
     </main>
