--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                                 Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
                             </p>
-                            <a href="#about" class="btn"><i class="fa fa-chevron-right"></i> Read More</a>
+                            <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read More</a>
                         </div>
                     </div>
                 </div>
