Added Blog section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     
 
     <main>
+        <!-- About -->
         <section id="about" class="icons bg-light">
             <div class="flex-items">
                 <div>
@@ -63,7 +64,7 @@
             </div>
         </section>
 
-        <!-- About  -->
+        <!-- Solutions  -->
         <section class="solutions flex-columns">
             <div class="row">
                 <div class="column">
@@ -89,8 +90,8 @@
         <!-- Cases -->
         <section id="cases" class="cases flex-grid section-padding">
             <header class="section-header">
-                <h2>This is what we do</h2>
-                <h3>Business Cases</h3>
+                <h4>This is what we do</h4>
+                <h2>Business Cases</h2>
                 <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, voluptas!
                 </p2>
             </header>
@@ -115,11 +116,28 @@
             </div>
         </section>
 
-        <section id="blog" class="icons bg-light">
-            <div class="flex-items">
-
+        <!-- Blog  -->
+        <section id="blog" class="blog flex-columns flex-reverse">
+            <div class="row">
+                <div class="column">
+                        <div class="column-1">
+                            <img src="images/blog/blog.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="column-2 bg-secondary">
+                            <h4>March 2021</h4>
+                            <h2>Blog Post One</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
+                            </p>
+                            <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read Our Blog</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+
     </main>
 </body>
 </html>
