Added Teams page

--- a/index.html
+++ b/index.html
@@ -138,6 +138,33 @@
             </div>
         </section>
 
+        <!-- Team -->
+        <section id="team" class="team section-padding">
+            <header class="section-header">
+                <h4>This is we we are</h4>
+                <h2>Our Professional Team</h2>
+                <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, voluptas!
+                </p2>
+            </header>
+
+            <div class="flex-items">
+                <div>
+                    <img src="images/team/person1.jpg" alt="">
+                    <h4>John Doe</h4>
+                    <p>President</p>
+                </div>
+                <div>
+                    <img src="images/team/person2.jpg" alt="">
+                    <h4>Jane Doe</h4>
+                    <p>CTO</p>
+                </div> 
+                <div>
+                    <img src="images/team/person3.jpg" alt="">
+                    <h4>Jimmy Doe</h4>
+                    <p>CEO</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
