Added basic contact form

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             </h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#cases">Cases</a></li>
+                    <li><a href="#team">Team</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -162,6 +163,38 @@
                     <img src="images/team/person3.jpg" alt="">
                     <h4>Jimmy Doe</h4>
                     <p>CEO</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact  -->
+        <section id="contact" class="contact flex-columns">
+            <div class="row">
+                <div class="column">
+                        <div class="column-1">
+                            <img src="images/contact.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="column-2 bg-light">
+                            <h2>Request callback</h2>
+                            <form action="" class="callback-form">
+                                <div class="form-control">
+                                    <label for="name"></label>
+                                    <input type="text" name="name" id="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-control">
+                                    <label for="email"></label>
+                                    <input type="email" name="email" id="email" placeholder="Enter email">
+                                </div>
+                                <div class="form-control">
+                                    <label for="phone"></label>
+                                    <input type="text" name="phone" id="phone" placeholder="Enter phone">
+                                </div>
+                                <input type="submit" value="Send" id="submit" class="btn">
+                            </form>
+                         </div>
+                    </div>
                 </div>
             </div>
         </section>
