Completed main section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="column">
-                        <div class="column-2 bg-light">
+                        <div class="column-2 bg-dark">
                             <h2>Request callback</h2>
                             <form action="" class="callback-form">
                                 <div class="form-control">
