--- a/index.html
+++ b/index.html
@@ -69,25 +69,23 @@
         <section class="solutions flex-columns">
             <div class="row">
                 <div class="column">
-                        <div class="column-1">
-                            <img src="images/people.jpg" alt="">
-                        </div>
+                    <div class="column-1">
+                        <img src="images/people.jpg" alt="">
                     </div>
-                    <div class="column">
-                        <div class="column-2 bg-primary">
-                            <h4>What are you looking for?</h4>
-                            <h2>We provide bespoke solutions</h2>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
-                            </p>
-                            <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read More</a>
-                        </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-primary">
+                        <h4>What are you looking for?</h4>
+                        <h2>We provide bespoke solutions</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
+                        </p>
+                        <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read More</a>
                     </div>
                 </div>
             </div>
         </section>
-
-    
+   
         <!-- Cases -->
         <section id="cases" class="cases flex-grid section-padding">
             <header class="section-header">
@@ -121,19 +119,18 @@
         <section id="blog" class="blog flex-columns flex-reverse">
             <div class="row">
                 <div class="column">
-                        <div class="column-1">
-                            <img src="images/blog/blog.jpg" alt="">
-                        </div>
+                    <div class="column-1">
+                        <img src="images/blog/blog.jpg" alt="">
                     </div>
-                    <div class="column">
-                        <div class="column-2 bg-secondary">
-                            <h4>March 2021</h4>
-                            <h2>Blog Post One</h2>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
-                            </p>
-                            <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read Our Blog</a>
-                        </div>
+                </div>
+                 <div class="column">
+                    <div class="column-2 bg-secondary">
+                        <h4>March 2021</h4>
+                        <h2>Blog Post One</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
+                        </p>
+                        <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read Our Blog</a>
                     </div>
                 </div>
             </div>
@@ -171,33 +168,42 @@
         <section id="contact" class="contact flex-columns">
             <div class="row">
                 <div class="column">
-                        <div class="column-1">
-                            <img src="images/contact.jpg" alt="">
-                        </div>
+                    <div class="column-1">
+                        <img src="images/contact.jpg" alt="">
                     </div>
-                    <div class="column">
-                        <div class="column-2 bg-dark">
-                            <h2>Request callback</h2>
-                            <form action="" class="callback-form">
-                                <div class="form-control">
-                                    <label for="name"></label>
-                                    <input type="text" name="name" id="name" placeholder="Enter name">
-                                </div>
-                                <div class="form-control">
-                                    <label for="email"></label>
-                                    <input type="email" name="email" id="email" placeholder="Enter email">
-                                </div>
-                                <div class="form-control">
-                                    <label for="phone"></label>
-                                    <input type="text" name="phone" id="phone" placeholder="Enter phone">
-                                </div>
-                                <input type="submit" value="Send" id="submit" class="btn">
-                            </form>
-                         </div>
+                </div>
+                <div class="column">
+                    <div class="column-2 bg-light">
+                        <h2>Request callback</h2>
+                        <form action="" class="callback-form">
+                            <div class="form-control">
+                                <label for="name"></label>
+                                <input type="text" name="name" id="name" placeholder="Enter name">
+                            </div>
+                            <div class="form-control">
+                                <label for="email"></label>
+                                <input type="email" name="email" id="email" placeholder="Enter email">
+                            </div>
+                            <div class="form-control">
+                                <label for="phone"></label>
+                                <input type="text" name="phone" id="phone" placeholder="Enter phone">
+                            </div>
+                            <input type="submit" value="Send" id="submit" class="btn">
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer class="footer bg-dark">
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+        </div>
+        <p>Copyright &copy; 2021 - EdgeLedger</p>
+    </footer>
 </body>
 </html>
