Getting back in the saddle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/stylesheet.css">
-    <title>Welcome to EdgeLedger</title>
+    <title>Kate Morris Home Page</title>
 </head>
 <body>
     <header class="hero">
