Getting back in the saddle

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <header class="hero">
         <div id="navbar" class="navbar"> 
             <h1 class="logo">
-                <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
+                <span class="text-primary"><i class="fal fa-laptop-code"></i> Kate </span>Morris
             </h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#cases">Cases</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#about">CV</a></li>
+                    <li><a href="#cases">102 Interiors</a></li>
+                    <li><a href="#team">Accessibility</a></li>
+                    <!-- <li><a href="#blog">Blog</a></li> -->
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="content">
-            <h1>The Sky Is The Limit</h1>
-            <p>We provide world class financial assistance</p>
+            <h1>My Sandbox and Shop Window</h1>
+            <!-- <p>We provide world class financial assistance</p> -->
             <a href="#about" class="btn"><i class="fa fa-chevron-right"></i> Read More</a>
         </div>
     </header>
