--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
 <body>
     <header class="hero">
         <div id="navbar" class="navbar"> 
-            <h1 class="logo">
-                <span class="text-primary"><i class="fal fa-laptop-code"></i> Kate </span>Morris
-            </h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#about">CV</a></li>
+                    <li><a href="./pages/cv.html">CV</a></li>
                     <li><a href="#cases">102 Interiors</a></li>
                     <li><a href="#team">Accessibility</a></li>
-                    <!-- <li><a href="#blog">Blog</a></li> -->
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="content">
-            <h1>My Sandbox and Shop Window</h1>
-            <!-- <p>We provide world class financial assistance</p> -->
-            <a href="#about" class="btn"><i class="fa fa-chevron-right"></i> Read More</a>
+            <h1>Kate Morris</h1>
+            <h2>My Sandbox & Shop Window</h2>
+            <!-- <a href="#about" class="btn"><i class="fa fa-chevron-right"></i> Read More</a> -->
         </div>
     </header>
     
@@ -75,8 +71,8 @@
                 </div>
                 <div class="column">
                     <div class="column-2 bg-primary">
-                        <h4>What are you looking for?</h4>
-                        <h2>We provide bespoke solutions</h2>
+                        <h2>What are you looking for?</h2>
+                        <h3>We provide bespoke solutions</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
                         </p>
@@ -198,12 +194,10 @@
 
     <footer class="footer bg-dark">
         <div class="social">
-            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
-            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a aria-label="Twitter icon" href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            <a aria-label="Linked In icon" href="#"><i class="fab fa-linkedin fa-2x"></i></a>
         </div>
-        <p>Copyright &copy; 2021 - EdgeLedger</p>
+        <p>Copyright &copy; 2021 - Kate Morris</p>
     </footer>
 </body>
 </html>
