added info to the cV page

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -23,36 +23,53 @@
         </div>
     </header>
     <main>
-        <div class="content">
+        <div >
             <h1>Kate Morris</h1>
             <h2>Curriculum Vitae</h2>
         </div>
 
     <!-- <section id="about" class="icons bg-light"> -->
-        <div class="flex-items">
+        <div class="flex-items icons bg-light">
             <div>
-                <i class="fas fa-book fa-2x"></i>
+                <i class="fas fa-graduation-cap fa-2x"></i>
                 <div>
-                    <h3>Portfolio Manager</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
+                    <h3 class="text-blue">Education</h3>
+                    <p class="text-bold">1987 - 1991 University of Dundee.</p>
+                    <p>Pure Mathematics and Computer Science</p>
+                    <p class="text-bold">1992 - 1993 Queen Mary and Westfield College.<br />
+                        University of London. </p>
+                    <p>Formal Methods of Software Development.</p>
                 </div>
             </div>
 
             <div>
-                <i class="fas fa-university fa-2x"></i>
+                <i class="fas fa-code fa-2x"></i>
                 <div>
-                    <h3>Investment Banking</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
-                </div>
-            </div>
-
-            <div>
-                <i class="fas fa-pencil-alt fa-2x"></i>
-                <div>
-                    <h3>Tax & custodial</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.
+                    <h3 class="text-blue">Technical Experience</h3>
+                    <p class="text-bold">1997 – 2001 Financial Times Information</p>
+                    <p>Senior Programmer</p>
+                    <p>Primarily using ​C++​, ​SQL and ​Perl scripting, I wrote programs to receive financial data from worldwide sources, parse and store this data. Manipulate and analyze to generate reports. • I was also involved in system design and client meetings, systems testing and implementation.</p>
+                    <p class="text-bold">1995 – 1997 fidessa (formerly royalblue)</p>
+                    <p>Mid to Senior Programmer</p>
+                    <p>Bond and equity trading systems for the London financial markets, <br /> 
+                        Programming in ​C​, ​C++​, ​smalltalk​, ​SQL​, data manipulation, including Front End and Back End development
                     </p>
+                    <p class="text-bold">1993 – 1995 Telecommunications & Management Systems</p>
+                    <p>Junior to Mid Programmer</p>
+                    <p>Equity trading systems for the London financial markets <br />
+                        Programming in ​C​ and C​ ++</p>
+                </div>
+            </div>
+
+            <div>
+                <i class="fas fa-chart-line fa-2x"></i>
+                <div>
+                    <h3 class="text-blue">Management Experience</h3>
+                    <p>1987 - 1991 University of Dundee. <br />
+                        Pure Mathematics and Computer Science</p>
+                    <p>1992 - 1993 Queen Mary and Westfield College. <br />
+                        University of London. <br />
+                        Formal Methods of Software Development.</p>
                 </div>
             </div>
         </div>
