Simplifying the page and starting again

--- a/index.html
+++ b/index.html
@@ -9,187 +9,12 @@
     <title>Kate Morris Home Page</title>
 </head>
 <body>
-    <header class="hero">
-        <div id="navbar" class="navbar"> 
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="./pages/cv.html">CV</a></li>
-                    <li><a href="#cases">102 Interiors</a></li>
-                    <li><a href="#team">Accessibility</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="content">
+    <main>
+        <div class="hero">
             <h1>Kate Morris</h1>
             <h2>My Sandbox & Shop Window</h2>
-            <!-- <a href="#about" class="btn"><i class="fa fa-chevron-right"></i> Read More</a> -->
         </div>
-    </header>
-    
 
-    <main>
-        <!-- About -->
-        <section id="about" class="icons bg-light">
-            <div class="flex-items">
-                <div>
-                    <i class="fas fa-book fa-2x"></i>
-                    <div>
-                        <h3>Portfolio Manager</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
-                    </div>
-                </div>
-
-                <div>
-                    <i class="fas fa-university fa-2x"></i>
-                    <div>
-                        <h3>Investment Banking</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.</p>
-                    </div>
-                </div>
-
-                <div>
-                    <i class="fas fa-pencil-alt fa-2x"></i>
-                    <div>
-                        <h3>Tax & custodial</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Quibusdam quasi et provident qui aut laudantium nulla quas quidem amet sapiente.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Solutions  -->
-        <section class="solutions flex-columns">
-            <div class="row">
-                <div class="column">
-                    <div class="column-1">
-                        <img src="images/people.jpg" alt="">
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="column-2 bg-primary">
-                        <h2>What are you looking for?</h2>
-                        <h3>We provide bespoke solutions</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
-                        </p>
-                        <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read More</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-   
-        <!-- Cases -->
-        <section id="cases" class="cases flex-grid section-padding">
-            <header class="section-header">
-                <h4>This is what we do</h4>
-                <h2>Business Cases</h2>
-                <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, voluptas!
-                </p2>
-            </header>
-
-            <div class="row">
-                <div class="column">
-                    <img src="images/cases/cases1.jpg" alt="">
-                    <img src="images/cases/cases2.jpg" alt="">
-                </div>
-                <div class="column">
-                    <img src="images/cases/cases3.jpg" alt="">
-                    <img src="images/cases/cases4.jpg" alt="">
-                </div>
-                <div class="column">
-                    <img src="images/cases/cases5.jpg" alt="">
-                    <img src="images/cases/cases6.jpg" alt="">
-                </div>
-                <div class="column">
-                    <img src="images/cases/cases7.jpg" alt="">
-                    <img src="images/cases/cases8.jpg" alt="">
-                </div>
-            </div>
-        </section>
-
-        <!-- Blog  -->
-        <section id="blog" class="blog flex-columns flex-reverse">
-            <div class="row">
-                <div class="column">
-                    <div class="column-1">
-                        <img src="images/blog/blog.jpg" alt="">
-                    </div>
-                </div>
-                 <div class="column">
-                    <div class="column-2 bg-secondary">
-                        <h4>March 2021</h4>
-                        <h2>Blog Post One</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Quidem dolores ut quibusdam sunt labore inventore quod magnam tempora debitis sequi!
-                        </p>
-                        <a href="#about" class="btn  btn-outline"><i class="fa fa-chevron-right"></i> Read Our Blog</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Team -->
-        <section id="team" class="team section-padding">
-            <header class="section-header">
-                <h4>This is we we are</h4>
-                <h2>Our Professional Team</h2>
-                <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, voluptas!
-                </p2>
-            </header>
-
-            <div class="flex-items">
-                <div>
-                    <img src="images/team/person1.jpg" alt="">
-                    <h4>John Doe</h4>
-                    <p>President</p>
-                </div>
-                <div>
-                    <img src="images/team/person2.jpg" alt="">
-                    <h4>Jane Doe</h4>
-                    <p>CTO</p>
-                </div> 
-                <div>
-                    <img src="images/team/person3.jpg" alt="">
-                    <h4>Jimmy Doe</h4>
-                    <p>CEO</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact  -->
-        <section id="contact" class="contact flex-columns">
-            <div class="row">
-                <div class="column">
-                    <div class="column-1">
-                        <img src="images/contact.jpg" alt="">
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="column-2 bg-light">
-                        <h2>Request callback</h2>
-                        <form action="" class="callback-form">
-                            <div class="form-control">
-                                <label for="name"></label>
-                                <input type="text" name="name" id="name" placeholder="Enter name">
-                            </div>
-                            <div class="form-control">
-                                <label for="email"></label>
-                                <input type="email" name="email" id="email" placeholder="Enter email">
-                            </div>
-                            <div class="form-control">
-                                <label for="phone"></label>
-                                <input type="text" name="phone" id="phone" placeholder="Enter phone">
-                            </div>
-                            <input type="submit" value="Send" id="submit" class="btn">
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer class="footer bg-dark">
@@ -199,5 +24,7 @@
         </div>
         <p>Copyright &copy; 2021 - Kate Morris</p>
     </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
