--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <div class="hero">
+        <div class="hero section-header-left">
             <h1>Kate Morris</h1>
             <h2>My Sandbox & Shop Window</h2>
         </div>
