--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <title>Kate Morris Home Page</title>
-</head>
-<body>
-    <main>
-        <div class="hero section-header-left">
-            <h1>Kate Morris</h1>
-            <h2>My Sandbox & Shop Window</h2>
-        </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/stylesheet.css">
+        <title>Kate Morris Home Page</title>
+    </head>
+    <body>
+        <main>
+            <div class="hero section-header-left">
+                <h1>Kate Morris</h1>
+                <h2>My Sandbox & Shop Window</h2>
+            </div>
+        </main>
 
-    </main>
-
-    <footer class="footer bg-dark">
-        <div class="social">
-            <a aria-label="Twitter icon" href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            <a aria-label="Linked In icon" href="#"><i class="fab fa-linkedin fa-2x"></i></a>
-        </div>
-        <p>Copyright &copy; 2021 - Kate Morris</p>
-    </footer>
-
-    <script src="assets/js/main.js"></script>
-</body>
+        <footer class="footer bg-dark">
+            <div class="social ">
+                <a aria-label="Linked In icon" href="https://www.linkedin.com/in/kate-morris-a3962943/"><i class="fab fa-linkedin fa-2x"></i></a>
+            </div>
+            <p>Copyright &copy; 2021 - Kate Morris</p>
+        </footer>
+    </body>
 </html>
