Made image resposive and nav bar on right

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         <title>Kate Morris Home Page</title>
     </head>
     <body>
+        <nav  class="topnav">   
+            <a class="active" href="#home">Home</a>
+            <div class="topnav-right">
+                <a href="#about">About</a>
+                <a href="#cv">CV</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </nav>
         <main>
             <div class="hero section-header-left">
                 <h1>Kate Morris</h1>
