--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav  class="topnav">   
             <a class="active" href="#home">Home</a>
             <div class="topnav-right">
-                <a href="#about">About</a>
+                <a href="./pages/about.html">About</a>
                 <a href="#cv">CV</a>
                 <a href="#contact">Contact</a>
             </div>
