--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <footer class="footer bg-dark">
             <div class="social ">
                 <a aria-label="Linked In icon" href="https://www.linkedin.com/in/kate-morris-a3962943/"><i class="fab fa-linkedin fa-2x"></i></a>
-            </div>
+                <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>            </div>
             <p>Copyright &copy; 2021 - Kate Morris</p>
         </footer>
     </body>
