Styled Edutaion Page

--- a/pages/education.html
+++ b/pages/education.html
@@ -5,19 +5,28 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
-            <link rel="stylesheet" href="css/stylesheet.css">
-            <title>Kate Morris Home Page</title>
+            <link rel="stylesheet" href="../css/stylesheet.css">
+            <title>Qualifications & Training</title>
 </head>
 <body>
     <main>
+
+        <nav  class="topnav">   
+            <a class="active" href="#home">Home</a>
+            <div class="topnav-right">
+                <!-- <a href="./pages/education.html">Education</a> -->
+                <a href="./pages/employment">Employment</a>
+                <a href="./pages/skills">Skills</a>
+                <a href="./pages/hobbies.html">Hobbies</a>
+                <a href="./pages/contact">Contact</a>
+            </div>
+        </nav>
         <header class="section-header">
-            <h1>Formal Qualifications & Training</h1>
+            <h1>Qualifications & Training</h1>
         </header>
-    
         <div class="flex-items education">
-            <div class="row">
                 <div class="column">
-                    <img src="../images/batchelors_grad_pic.jpg" alt="Kate aged 21 with black hair in a graduation gown" height="400" >
+                    <img src="../images/batchelors_grad_pic.jpg" alt="Kate aged 21 with black hair in a graduation gown" height="400" width="400">
                     <h2>Batchelor of Science</h2>
                     <p>Pure Maths & Computing</p>
                     <p>Dundee University</p>
@@ -31,15 +40,20 @@
                     <p>Sept 1992 - July 1993</p>
                 </div>
                 <div class="column">
-                    <img src="../images/makers_grad_pic.png" alt="" height="400">
+                    <img src="../images/makers_grad_pic.png" alt="Kate in a summer dress banging a graduation gong" height="400" width="400">
                     <h2>Makers Coding Bootcamp</h2>
                     <p>Upskilling to meet todays requirements</p>
-                    <a href="https://makers.tech/">London’s leading software development boot camp</a>
+                    <a  href="https://makers.tech/"><img src="../images/Makers-logo.png" alt="Makers Logo" style="width:30%;"></img></a>
                     <p>Jan 2019 - April 2019</p>
                 </div>
-            </div>
         </div>
     </body>
+    <footer class="footer bg-dark">
+        <div class="social ">
+            <a aria-label="Linked In icon" href="https://www.linkedin.com/in/kate-morris-a3962943/"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>            </div>
+        <p>Copyright &copy; 2021 - Kate Morris</p>
+    </footer>
     </main>
    
 </html>
