Made the skeleton pages

--- a/pages/education.html
+++ b/pages/education.html
@@ -12,13 +12,14 @@
     <main>
 
         <nav  class="topnav">   
-            <a class="active" href="#home">Home</a>
+            <a class="active" href="../index.html">Home</a>
             <div class="topnav-right">
                 <!-- <a href="./pages/education.html">Education</a> -->
-                <a href="./pages/employment">Employment</a>
-                <a href="./pages/skills">Skills</a>
+                <a href="./pages/about.html">About</a>
+                <a href="./pages/employment.html">Employment</a>
+                <a href="./pages/skills.html">Skills</a>
                 <a href="./pages/hobbies.html">Hobbies</a>
-                <a href="./pages/contact">Contact</a>
+                <a href="./pages/contact.html">Contact</a>
             </div>
         </nav>
         <header class="section-header">
