--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     </head>
     <body>
         <nav  class="topnav">   
-            <a class="active" href="#home">Home</a>
+            <a class="active" href="index.html">Home</a>
             <div class="topnav-right">
-                <a href="./pages/education.html">Education</a>
-                <a href="#cv">CV</a>
-                <a href="#contact">Contact</a>
+                <a href="./pages/about.html">About</a>
+                <a href="./pages/education.html">Qualifications & Training</a>
+                <a href="./pages/employment.html">Employment</a>
+                <a href="./pages/skills.html">Skills</a>
+                <a href="./pages/hobbies.html">Hobbies</a>
+                <a href="./pages/contact.html">Contact</a>
             </div>
         </nav>
         <main>
