Added sliding text to Qualificationns & training page

--- a/pages/education.html
+++ b/pages/education.html
@@ -24,29 +24,51 @@
         </nav>
         <header class="section-header">
             <h1>Qualifications & Training</h1>
+            <p>Scroll over the image for more information</p>
         </header>
         <div class="flex-items education">
-                <div class="column">
-                    <img src="../images/batchelors_grad_pic.jpg" alt="Kate aged 21 with black hair in a graduation gown" height="400" width="400">
+            <div class="column">
+                <div class="container">
                     <h2>Batchelor of Science</h2>
-                    <p>Pure Maths & Computing</p>
-                    <p>Dundee University</p>
-                    <p>Sept 1987 - July 1991</p>
+                    <img src="../images/batchelors_grad_pic.jpg" alt="Kate in graduation robes with black hair" class="image">
+                    <div class="overlay">
+                        <div class="text">                         
+                        <p>Pure Maths </p>
+                        <p>& Computing</p>                                
+                        <p>Dundee University</p>
+                        <p>Sept 1987 - July 1991</p>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+            <div class="column">
+                <div class="container">
+                <h2>Master of Science</h2>
+                <img src="../images/masters_grad_pic.jpg" alt="Kate aged 23 with blond hair in a graduation gown" class="image">
+                <div class="overlay">
+                    <div class="text">   
+                        <p>Formal Methods of Software Engineering</p>
+                        <p>University of London, </p>
+                        <p>Queen Mary & Westfield College</p>
+                        <p>Sept 1992 - July 1993</p>
+                    </div>
                 </div>
-                <div class="column">
-                    <img src="../images/masters_grad_pic.jpg" alt="Kate aged 23 with blond hair in a graduation gown" height="400"  >
-                    <h2>Master of Science</h2>
-                    <p>Formal Methods of Software Engineering</p>
-                    <p>University of London, Queen Mary & Westfield College</p>
-                    <p>Sept 1992 - July 1993</p>
                 </div>
-                <div class="column">
-                    <img src="../images/makers_grad_pic.png" alt="Kate in a summer dress banging a graduation gong" height="400" width="400">
+            </div>
+            <div class="column">
+                <div class="container">
                     <h2>Makers Coding Bootcamp</h2>
-                    <p>Upskilling to meet todays requirements</p>
-                    <a  href="https://makers.tech/"><img src="../images/Makers-logo.png" alt="Makers Logo" style="width:30%;"></img></a>
-                    <p>Jan 2019 - April 2019</p>
+                    <!-- <a  href="https://makers.tech/"><img src="../images/Makers-logo.png" alt="Makers Logo" style="width:30%"></img></a> -->
+                    <img src="../images/Makers_grad_pic.jpg" alt="Kate in a summer dress banging a graduation gong" class="image">
+                    <div class="overlay">
+                        <div class="text">   
+                            <p>Front end developer bootcamp</p>
+                            <p>Upskilling to meet todays requirements</p>
+                            <p>Jan 2019 - April 2019</p>
+                        </div>
+                    </div>
                 </div>
+            </div>
         </div>
     </body>
     <footer class="footer bg-dark">
