--- a/pages/education.html
+++ b/pages/education.html
@@ -44,7 +44,7 @@
             <div class="column">
                 <div class="container">
                 <h2>Master of Science</h2>
-                <img src="../images/masters_grad_pic.jpg" alt="Kate aged 23 with blond hair in a graduation gown" class="image">
+                <img src="../images/masters_grad_pic.jpg" alt="Kate aged 23 with blond hair in a graduation gown" class="image" width="400px" height="auto">
                 <div class="overlay">
                     <div class="text">   
                         <p>Formal Methods of Software Engineering</p>
@@ -58,8 +58,10 @@
             <div class="column">
                 <div class="container">
                     <h2>Makers Coding Bootcamp</h2>
-                    <!-- <a  href="https://makers.tech/"><img src="../images/Makers-logo.png" alt="Makers Logo" style="width:30%"></img></a> -->
-                    <img src="../images/Makers_grad_pic.jpg" alt="Kate in a summer dress banging a graduation gong" class="image">
+                    <br> <br>
+                
+                    <a  href="https://makers.tech/"><img src="../images/Makers-logo.png" alt="Makers Logo" style="width:30%"></img></a>
+                    <!-- <img src="../images/Makers_grad_pic.jpg" alt="Kate in a summer dress banging a graduation gong" class="image"> -->
                     <div class="overlay">
                         <div class="text">   
                             <p>Front end developer bootcamp</p>
@@ -74,7 +76,9 @@
     <footer class="footer bg-dark">
         <div class="social ">
             <a aria-label="Linked In icon" href="https://www.linkedin.com/in/kate-morris-a3962943/"><i class="fab fa-linkedin fa-2x"></i></a>
-            <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>            </div>
+            <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>
+         </div>
+         <a href="./accessibility-statement.html">Accessibility Statement</a>
         <p>Copyright &copy; 2021 - Kate Morris</p>
     </footer>
     </main>
