--- a/pages/accessibility-statement.html
+++ b/pages/accessibility-statement.html
@@ -6,7 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous">
             <link rel="stylesheet" href="../css/stylesheet.css">
-            <title>Employment</title>
+            <title>Accessibility Statement</title>
 </head>
 <body>
     <main>
@@ -16,23 +16,21 @@
             <div class="topnav-right">
                 <a href="./pages/about.html">About</a>
                 <a href="./pages/education.html">Qualifications & Training</a>
-                <!-- <a href="./pages/employment.html">Employment</a> -->
-                <a href="./pages/skills.html">Skills</a>
+                <a href="./pages/employment.html">Employment</a>
+                <!-- <a href="./pages/skills.html">Skills</a> -->
                 <a href="./pages/hobbies.html">Hobbies</a>
                 <a href="./pages/contact.html">Contact</a>
             </div>
         </nav>
         <header class="section-header">
-            <h1>Employment</h1>
+            <h1>Accessibility Statement</h1>
         </header>
        
     </body>
     <footer class="footer bg-dark">
         <div class="social ">
             <a aria-label="Linked In icon" href="https://www.linkedin.com/in/kate-morris-a3962943/"><i class="fab fa-linkedin fa-2x"></i></a>
-            <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>            
-        </div>
-        <a href="./accessibility-statement.html">Accessibility Statement</a>
+            <a aria-label="Github icon" href="https://github.com/kate102"><i class="fab fa-github fa-2x"></i></a>            </div>
         <p>Copyright &copy; 2021 - Kate Morris</p>
     </footer>
     </main>
